--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.5.2",
+    "@iconify-json/ic": "^1.1.17",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "unocss": "^0.58.0",
     "vite": "^5.0.10"
   },
   "dependencies": {
