--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +17,9 @@
     "@iconify-json/ic": "^1.1.17",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "unocss": "^0.58.0",
-    "vite": "^5.0.10"
+    "vite": "^5.0.10",
+    "vitepress": "1.0.0-rc.32",
+    "vitepress-theme-demoblock": "^3.0.3"
   },
   "dependencies": {
     "vue": "^3.3.13"
