--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "docs:preview": "vitepress preview docs",
+    "test": "vitest"
   },
   "keywords": [],
   "author": "",
@@ -16,10 +17,13 @@
   "devDependencies": {
     "@iconify-json/ic": "^1.1.17",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "@vue/test-utils": "^2.4.3",
+    "happy-dom": "^12.10.3",
     "unocss": "^0.58.0",
     "vite": "^5.0.10",
     "vitepress": "1.0.0-rc.32",
-    "vitepress-theme-demoblock": "^3.0.3"
+    "vitepress-theme-demoblock": "^3.0.3",
+    "vitest": "^1.1.0"
   },
   "dependencies": {
     "vue": "^3.3.13"
