--- a/package.json
+++ b/package.json
@@ -9,16 +9,25 @@
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs",
-    "test": "vitest"
+    "test": "vitest",
+    "lint": "eslint --fix --ext .ts,.vue,.tsx src --format=pretty",
+    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.tsx\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@iconify-json/ic": "^1.1.17",
+    "@rushstack/eslint-patch": "^1.6.1",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.4.3",
+    "eslint": "^8.56.0",
+    "eslint-formatter-pretty": "5",
+    "eslint-plugin-json": "^3.1.0",
     "happy-dom": "^12.10.3",
+    "prettier": "^3.1.1",
     "unocss": "^0.58.0",
     "vite": "^5.0.10",
     "vitepress": "1.0.0-rc.32",
