--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs",
     "test": "vitest",
+    "test:run": "vitest run",
     "lint": "eslint --fix --ext .ts,.vue,.tsx src --format=pretty",
-    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.tsx\""
+    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.tsx\"",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +29,7 @@
     "eslint-formatter-pretty": "5",
     "eslint-plugin-json": "^3.1.0",
     "happy-dom": "^12.10.3",
+    "husky": "^8.0.3",
     "prettier": "^3.1.1",
     "unocss": "^0.58.0",
     "vite": "^5.0.10",
