--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@commitlint/cli": "^18.4.3",
+    "@commitlint/config-conventional": "^18.4.3",
     "@iconify-json/ic": "^1.1.17",
     "@rushstack/eslint-patch": "^1.6.1",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
