--- a/package.json
+++ b/package.json
@@ -13,7 +13,14 @@
     "test:run": "vitest run",
     "lint": "eslint --fix --ext .ts,.vue,.tsx src --format=pretty",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.tsx\"",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "pre-commit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,ts,vue,jsx,tsx}": [
+      "eslint --fix"
+    ],
+    "*.{js,jsx,ts,tsx,md,html,css,lees,scss,sass}": "prettier --write"
   },
   "keywords": [],
   "author": "",
@@ -32,6 +39,7 @@
     "eslint-plugin-json": "^3.1.0",
     "happy-dom": "^12.10.3",
     "husky": "^8.0.3",
+    "lint-staged": "^15.2.0",
     "prettier": "^3.1.1",
     "unocss": "^0.58.0",
     "vite": "^5.0.10",
