--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
-# Dependency directories
-node_modules/
-dist/
+**/node_modules/
+**/coverage/
+**/.pnpm-debug
+**/dist
+package-lock.json
+.DS_Store
+.spress
+.vercel
+dist
+.idea
+/test
+*.zip
 cache
