--- a/package.json
+++ b/package.json
@@ -4,50 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs",
-    "test": "vitest",
-    "test:run": "vitest run",
-    "lint": "eslint --fix --ext .ts,.vue,.tsx src --format=pretty",
-    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.tsx\"",
-    "prepare": "husky install",
-    "pre-commit": "lint-staged"
+    "preinstall": "npx only-allow pnpm"
   },
-  "lint-staged": {
-    "*.{js,ts,vue,jsx,tsx}": [
-      "eslint --fix"
-    ],
-    "*.{js,jsx,ts,tsx,md,html,css,lees,scss,sass}": "prettier --write"
-  },
+  "private": "true",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@commitlint/cli": "^18.4.3",
-    "@commitlint/config-conventional": "^18.4.3",
-    "@iconify-json/ic": "^1.1.17",
-    "@rushstack/eslint-patch": "^1.6.1",
+    "@commitlint/cli": "^18.4.4",
+    "@commitlint/config-conventional": "^18.4.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
-    "@vue/eslint-config-prettier": "^9.0.0",
-    "@vue/eslint-config-typescript": "^12.0.0",
-    "@vue/test-utils": "^2.4.3",
-    "eslint": "^8.56.0",
-    "eslint-formatter-pretty": "5",
-    "eslint-plugin-json": "^3.1.0",
-    "happy-dom": "^12.10.3",
     "husky": "^8.0.3",
-    "lint-staged": "^15.2.0",
-    "prettier": "^3.1.1",
-    "unocss": "^0.58.0",
-    "vite": "^5.0.10",
-    "vitepress": "1.0.0-rc.32",
-    "vitepress-theme-demoblock": "^3.0.3",
-    "vitest": "^1.1.0"
-  },
-  "dependencies": {
-    "vue": "^3.3.13"
+    "unocss": "^0.58.3",
+    "vite": "^5.0.10"
   }
 }
