--- a/packages/rz-ui-vue/package.json
+++ b/packages/rz-ui-vue/package.json
@@ -6,11 +6,13 @@
   "module": "./dist/rz-ui.mjs",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
     "test": "vitest",
     "test:run": "vitest run",
     "lint": "eslint --fix --ext .ts,.vue,.tsx src --format=pretty",
-    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.tsx\""
+    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.tsx\"",
+    "build": "pnpm build:components",
+    "build:all": "vite build",
+    "build:components": "esno ./scripts/build.ts"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +26,8 @@
     "eslint": "^8.56.0",
     "eslint-formatter-pretty": "5",
     "eslint-plugin-json": "^3.1.0",
+    "esno": "^4.0.0",
+    "fs-extra": "^11.2.0",
     "happy-dom": "^12.10.3",
     "prettier": "^3.1.1",
     "vitepress": "1.0.0-rc.32",
