--- a/packages/rz-ui-vue/package.json
+++ b/packages/rz-ui-vue/package.json
@@ -2,7 +2,7 @@
   "name": "rz-ui-vue",
   "version": "1.0.2",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/rz-ui.mjs",
   "module": "./dist/rz-ui.mjs",
   "scripts": {
     "dev": "vite",
