--- a/packages/rz-ui-vue/package.json
+++ b/packages/rz-ui-vue/package.json
@@ -12,7 +12,10 @@
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.tsx\"",
     "build": "pnpm build:components",
     "build:all": "vite build",
-    "build:components": "esno ./scripts/build.ts"
+    "build:components": "esno ./scripts/build.ts",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "keywords": [],
   "author": "",
