--- a/packages/rz-ui-vue/package.json
+++ b/packages/rz-ui-vue/package.json
@@ -35,8 +35,10 @@
     "eslint-plugin-json": "^3.1.0",
     "esno": "^4.0.0",
     "fs-extra": "^11.2.0",
+    "handlebars": "^4.7.8",
     "happy-dom": "^12.10.3",
     "prettier": "^3.1.1",
+    "vite-plugin-dts": "^3.7.2",
     "vitepress": "1.0.0-rc.32",
     "vitepress-theme-demoblock": "^3.0.3",
     "vitest": "^1.1.0"
