--- a/packages/rz-ui-vue/tsconfig.json
+++ b/packages/rz-ui-vue/tsconfig.json
@@ -2,16 +2,12 @@
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig to read more about this file */
     "declaration": true,
-    "declarationDir": "./dist/types",
+    // "declarationDir": "./dist/types",
     "jsx": "preserve",
-    "lib": ["es2016"],
+    "lib": ["es2016"]
   },
-  "include": [
-    "src/**/*.*",
-  ],
-  "exclude": [
-    "node_modules",
-  ],
+  "include": ["src/**/*.*"],
+  "exclude": ["node_modules"],
   "esModuleInterop": false,
-  "allowSyntheticDefaultImports": true,
+  "allowSyntheticDefaultImports": true
 }
