--- a/.github/workflows/publish-rz-ui-vue.yml
+++ b/.github/workflows/publish-rz-ui-vue.yml
@@ -8,7 +8,7 @@ jobs:
   publish:
     runs-on: ubuntu-latest
 
-    name: "publish npm"
+    name: 'publish npm'
 
     environment: npm
 
@@ -20,12 +20,12 @@ jobs:
       - name: Install modules
         run: pnpm install
       - name: Build
-        run: cd packages/rz-ui-vue && pnpm run build
-      - name: "Publish to the npm registry"
+        run: pnpm run build
+      - name: 'Publish to the npm registry'
         uses: JS-DevTools/npm-publish@v2
         with:
           token: ${{ secrets.RZ_UI_TOKEN }}
-          package: packages/rz-ui-vue
+          package: ./dist
       # - name: 'Publish to the npm registry'
       #   uses: primer/publish@3.0.0
       #   env:
