--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "declaration": true,
     // "declarationDir": "./dist/types",
     "jsx": "preserve",
-    "lib": ["es2016"]
+    "lib": ["es2016"],
+    "moduleResolution": "node"
   },
   "include": ["src/**/*.*"],
   "exclude": ["node_modules"],
