--- a/package.json
+++ b/package.json
@@ -24,8 +24,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@commitlint/cli": "^18.4.4",
+    "@commitlint/config-conventional": "^18.4.4",
     "@iconify-json/ic": "^1.1.17",
     "@rushstack/eslint-patch": "^1.6.1",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vitest/coverage-istanbul": "^1.2.1",
     "@vitest/coverage-v8": "^1.2.1",
     "@vue/eslint-config-prettier": "^9.0.0",
@@ -38,19 +42,20 @@
     "fs-extra": "^11.2.0",
     "handlebars": "^4.7.8",
     "happy-dom": "^12.10.3",
+    "husky": "^8.0.3",
+    "postcss-color-mix": "^1.1.0",
+    "postcss-each": "^1.1.0",
+    "postcss-each-variables": "^0.3.0",
+    "postcss-for": "^2.1.1",
+    "postcss-nested": "^6.0.1",
     "prettier": "^3.1.1",
+    "vite": "^5.2.8",
     "vite-plugin-dts": "^3.7.2",
     "vitepress": "1.0.0-rc.32",
     "vitepress-theme-demoblock": "^3.0.3",
-    "vitest": "^1.1.0",
-    "@commitlint/cli": "^18.4.4",
-    "@commitlint/config-conventional": "^18.4.4",
-    "@vitejs/plugin-vue-jsx": "^3.1.0",
-    "husky": "^8.0.3",
-    "unocss": "^0.58.3",
-    "vite": "^5.0.10"
+    "vitest": "^1.1.0"
   },
   "dependencies": {
-    "vue": "^3.3.13"
+    "vue": "3.4.21"
   }
 }
