--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "declaration": true,
     // "declarationDir": "./dist/types",
     "jsx": "preserve",
-    "lib": ["es2016"],
+    "lib": ["es2016", "dom"],
     "moduleResolution": "node"
   },
   "include": ["src/**/*.*"],
