--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@commitlint/config-conventional": "^18.4.4",
     "@iconify-json/ic": "^1.1.17",
     "@rushstack/eslint-patch": "^1.6.1",
+    "@types/lodash-es": "^4.17.12",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vitest/coverage-istanbul": "^1.2.1",
@@ -56,6 +57,10 @@
     "vitest": "^1.1.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/vue-fontawesome": "^3.0.6",
+    "lodash-es": "^4.17.21",
     "vue": "3.4.21"
   }
 }
