--- a/.github/workflows/publish-rz-ui-vue.yml
+++ b/.github/workflows/publish-rz-ui-vue.yml
@@ -25,7 +25,7 @@ jobs:
         uses: JS-DevTools/npm-publish@v2
         with:
           token: ${{ secrets.RZ_UI_TOKEN }}
-          package: ./dist
+          package: ./
       # - name: 'Publish to the npm registry'
       #   uses: primer/publish@3.0.0
       #   env:
